--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Home
+title: Forrest Rice - Home
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Journaling explorations of bridge, programming, and the world
